--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -253,7 +253,6 @@
         </div>
       </section>
     </main>
-
     <footer>
   <div>
     <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
@@ -261,6 +260,7 @@
     <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
   </div>
 </footer>
+  </div>
   </body>
 </html>
 
