--- a/html_advanced/24-index.html
+++ b/html_advanced/24-index.html
@@ -13,17 +13,15 @@
     <header>
       <div>
         <a href="/"><span>Techium</span></a>
-        <nav>
-		<ul>
-          <a href="/">Home</a>
-          <a href="#services">Services</a>
-          <a href="#works">Works</a>
-          <a href="#about">About</a>
-          <a href="#latest_news">Latest news</a>
-          <a href="#testimonials">Testimonials</a>
-          <a href="#contact">Contact</a>
-	  	</ul>
-        </nav>
+	<nav>
+  <a href="/">Home</a>
+  <a href="#services">Services</a>
+  <a href="#works">Works</a>
+  <a href="#about">About</a>
+  <a href="#latest_news">Latest news</a>
+  <a href="#testimonials">Testimonials</a>
+  <a href="#contact">Contact</a>
+</nav>
       </div>
     </header>
 
@@ -152,12 +150,13 @@
     <!-- Footer -->
     <footer>
       <div>
-	      <ul>
-        <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
-        <a href="https://twitter.com/holbertonschool">Twitter</a>
-        <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
-	</ul>
-      </div>
+  <ul>
+    <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+    <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+    <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+  </ul>
+</div>
+
     </footer>
   </body>
 </html>
