--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -13,17 +13,17 @@
     <header>
       <div>
         <a href="/"><span>Techium</span></a>
-	<nav>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="#services">Services</a></li>
-    <li><a href="#works">Works</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#latest_news">Latest news</a></li>
-    <li><a href="#testimonials">Testimonials</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#latest_news">Latest news</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
@@ -47,12 +47,12 @@
             <p>We work with you</p>
           </header>
           <div>
-    	    <h3><a href="#">Design & Concept</a></h3>
-	    <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Design & Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
             <h3><a href="#">Content Strategy</a></h3>
-	    <h3><a href="#">UX Design</a></h3>
-	    <h3><a href="#">Web Development</a></h3>
-	    <h3><a href="#">Social Media</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
           </div>
         </div>
       </section>
@@ -65,9 +65,9 @@
             <p>Take a look in our portfolio</p>
           </header>
           <div>
-	    <article><a href="#"><h3>Interior Design</h3></a></article>
-	    <article><a href="#"><h3>Web Development</h3></a></article>
-	    <article><a href="#"><h3>Personal Brand</h3></a></article>
+            <article><a href="#"><h3>Interior Design</h3></a></article>
+            <article><a href="#"><h3>Web Development</h3></a></article>
+            <article><a href="#"><h3>Personal Brand</h3></a></article>
           </div>
         </div>
       </section>
@@ -82,10 +82,8 @@
           <div>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
             <h3>Our culture</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-
             <h3>How we work</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           </div>
@@ -102,24 +100,49 @@
           <div>
             <article>
               <p>Career</p>
-	      <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
             <article>
               <p>Digital Life</p>
-	      <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+              <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
             <article>
               <p>Social</p>
-	      <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
           </div>
         </div>
       </section>
 
-
+      <!-- Testimonials section -->
+      <section id="testimonials">
+        <div>
+          <header>
+            <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
+          </header>
+          <div>
+            <article>
+              <blockquote>
+                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                <cite>Yuri Y.</cite>
+              </blockquote>
+            </article>
+            <article>
+              <blockquote>
+                Thank you so much for your help. Techium company is awesome!
+                <cite>Dorrie S.</cite>
+              </blockquote>
+            </article>
+            <article>
+              <blockquote>
+                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                <cite>Sven H.</cite>
+              </blockquote>
+            </article>
           </div>
         </div>
       </section>
@@ -140,26 +163,26 @@
     </main>
 
     <!-- Footer -->
-<footer>
-  <div>
-    <ul>
-      <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-      <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-      <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-    </ul>
-  </div>
+    <footer>
+      <div>
+        <ul>
+          <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+          <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+        </ul>
+      </div>
 
-  <hr>
-  <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+      <hr>
+      <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
 
-  <div>
-    <ul>
-      <li><a href="#">Terms of Use</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Cookie Policy</a></li>
-    </ul>
-  </div>
-</footer>
+      <div>
+        <ul>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Cookie Policy</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
 
