--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -13,7 +13,7 @@
     <header>
       <div>
         <a href="/"><span>Techium</span></a>
-	<nav>
+        <nav>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="#services">Services</a></li>
@@ -47,12 +47,12 @@
             <p>We work with you</p>
           </header>
           <div>
-    	    <h3><a href="#">Design & Concept</a></h3>
-	    <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Design & Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
             <h3><a href="#">Content Strategy</a></h3>
-	    <h3><a href="#">UX Design</a></h3>
-	    <h3><a href="#">Web Development</a></h3>
-	    <h3><a href="#">Social Media</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
           </div>
         </div>
       </section>
@@ -65,9 +65,9 @@
             <p>Take a look in our portfolio</p>
           </header>
           <div>
-	    <article><a href="#"><h3>Interior Design</h3></a></article>
-	    <article><a href="#"><h3>Web Development</h3></a></article>
-	    <article><a href="#"><h3>Personal Brand</h3></a></article>
+            <article><a href="#"><h3>Interior Design</h3></a></article>
+            <article><a href="#"><h3>Web Development</h3></a></article>
+            <article><a href="#"><h3>Personal Brand</h3></a></article>
           </div>
         </div>
       </section>
@@ -102,43 +102,47 @@
           <div>
             <article>
               <p>Career</p>
-	      <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
             <article>
               <p>Digital Life</p>
-	      <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+              <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
             <article>
               <p>Social</p>
-	      <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
           </div>
         </div>
       </section>
 
-<!-- Testimonials section -->
-<section id="testimonials">
-  <div>
-    <header>
-      <h2>Testimonials</h2>
-      <p>We are more than a digital company</p>
-    </header>
-    <div>
-      <article>
-        <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website! <cite>Yuri Y.</cite></blockquote>
-      </article>
-      <article>
-        <blockquote>Thank you so much for your help. Techium company is awesome! <cite>Dorrie S.</cite></blockquote>
-      </article>
-      <article>
-        <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company. <cite>Sven H.</cite></blockquote>
-      </article>
-    </div>
-  </div>
-</section>
+      <!-- Testimonials section -->
+      <section id="testimonials">
+        <div>
+          <header>
+            <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
+          </header>
+          <div>
+            <article>
+              <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
+              <cite>Yuri Y.</cite>
+            </article>
+            <article>
+              <blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
+              <cite>Dorrie S.</cite>
+            </article>
+            <article>
+              <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
+              <cite>Sven H.</cite>
+            </article>
+          </div>
+        </div>
+      </section>
+
       <!-- Contact section -->
       <section id="contact">
         <div>
@@ -177,4 +181,3 @@
 </footer>
   </body>
 </html>
-
