--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -93,7 +93,7 @@
         </header>
         <div>
           <h3>Inline quote</h3>
-          <p>As Steve Jobs said, <q>Stay hungry. Stay foolish.</q></p>
+           <q>Stay hungry. Stay foolish.</q>
         </div>
 
         <div>
