--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -140,32 +140,39 @@
         <header>
           <h2>Table</h2>
         </header>
-        <table>
-          <thead>
-            <tr>
-              <th scope="col">Title</th>
-              <th scope="col">Director</th>
-              <th scope="col">Release Date</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">The Godfather</th>
-              <td>Francis Ford Coppola</td>
-              <td>1972</td>
-            </tr>
-            <tr>
-              <th scope="row">Star Wars</th>
-              <td>George Lucas</td>
-              <td>1977</td>
-            </tr>
-            <tr>
-              <th scope="row">Pulp Fiction</th>
-              <td>Quentin Tarantino</td>
-              <td>1994</td>
-            </tr>
-          </tbody>
-        </table>
+	<!-- Table -->
+<section>
+  <header>
+    <h2>Table</h2>
+  </header>
+  <table>
+    <caption>Star Wars Original Trilogy</caption>
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Director</th>
+        <th scope="col">Release Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">Star Wars: Episode IV - A New Hope</th>
+        <td>George Lucas</td>
+        <td>May 25th, 1977</td>
+      </tr>
+      <tr>
+        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+        <td>Irvin Kershner</td>
+        <td>May 21st, 1980</td>
+      </tr>
+      <tr>
+        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+        <td>Richard Marquand</td>
+        <td>May 25th, 1983</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
       </section>
     </main>
   </body>
