--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -141,7 +141,7 @@
     <h2>Table</h2>
   </header>
   <table>
-    <caption>Star Wars Original Trilogy</caption>
+    <caption>Star Wars movies</caption>
     <thead>
       <tr>
         <th scope="col">Title</th>
