--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -141,8 +141,7 @@
     <h2>Table</h2>
   </header>
   <table>
-    <caption>Star Wars movies</caption>
-    <thead>
+    <caption>Star Wars movies</caption><thead>
       <tr>
         <th scope="col">Title</th>
         <th scope="col">Director</th>
