--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -60,11 +60,13 @@
           <dl>
             <dt>Definition List title</dt>
             <dd>Definition text.</dd>
+
             <dt>Startup</dt>
             <dd>
               A startup company or startup is a company or temporary organization designed to
               search for a repeatable and scalable business model.
             </dd>
+
             <dt>Water</dt>
             <dd>
               A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and
@@ -91,84 +93,86 @@
         </header>
         <div>
           <h3>Inline quote</h3>
-          <q>Stay hungry. Stay foolish.</q>
+           <q>Stay hungry. Stay foolish.</q>
         </div>
+
         <div>
           <h3>Blockquote</h3>
-          <blockquote cite="Kanye West, Musician">
-            I will be the leader of a company that ends up being worth billions of dollars, because
-            I got the answers. I understand culture. I am the nucleus. I think that’s a
-            responsibility that I have, to push possibilities, to show people, this is the level
-            that things could be at.
+          <blockquote cite="https://example.com">
+            <p>
+              I will be the leader of a company that ends up being worth billions of dollars,
+              because I got the answers. I understand culture. I am the nucleus. I think that's a
+              responsibility that I have, to push possibilities, to show people, this is the level
+              that things could be at.
+            </p>
+            <cite>Kanye West, Musician</cite>
           </blockquote>
-          <cite>Kanye West, Musician</cite>
+              <!-- Typography -->
+    <section>
+      <header>
+        <h2>Typography</h2>
+      </header>
+      <div>
+        <address>
+          320 Stewart Avenue, Unit 12<br>
+          New York City NY 10001
+        </address>
+      </div>
+
+<div>
+  <pre>
+    <h2>My title</h2>
+    <p>
+      Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. 
+      Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh 
+      vel ante rhoncus faucibus.
+    </p>
+  </pre>
+</div>
+      <div>
+        <p>
+          Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>.
+          Duis finibus leo massa, eget dapibus erat finibus sed.
+          Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut.
+          Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
+        </p>
+      </div>
+    </section>
+
+    <!-- Table -->
+    <section>
+      <header>
+        <h2>Table</h2>
+      </header>
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">Title</th>
+            <th scope="col">Director</th>
+            <th scope="col">Release Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Star Wars Episode IV: A New Hope</th>
+            <td>George Lucas</td>
+            <td>1977</td>
+          </tr>
+          <tr>
+            <th scope="row">Star Wars Episode V: The Empire Strikes Back</th>
+            <td>Irvin Kershner</td>
+            <td>1980</td>
+          </tr>
+          <tr>
+            <th scope="row">Star Wars Episode VI: Return of the Jedi</th>
+            <td>Richard Marquand</td>
+            <td>1983</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
         </div>
       </section>
-
-      <!-- Typography -->
-      <section>
-        <header>
-          <h2>Typography</h2>
-        </header>
-        <div>
-          <address>
-            320 Stewart Avenue, Unit 12<br />
-            New York City NY 10001
-          </address>
-        </div>
-        <div>
-          <pre>
-<h2>My title</h2>
-<p>
-  Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero.
-  Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.
-</p>
-          </pre>
-        </div>
-        <div>
-          <p>
-            Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. 
-            Duis finibus leo massa, eget dapibus erat finibus sed. 
-            Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. 
-            Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
-          </p>
-        </div>
-      </section>
-
- <!-- Table -->
-<section>
-  <header>
-    <h2>Table</h2>
-  </header>
-  <table>
-    <caption>Star Wars movies</caption>
-    <thead>
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Director</th>
-        <th scope="col">Release Date</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">Star Wars: Episode IV - A New Hope</th>
-        <td>George Lucas</td>
-        <td>May 25th, 1977</td>
-      </tr>
-      <tr>
-        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
-        <td>Irvin Kershner</td>
-        <td>May 21st, 1980</td>
-      </tr>
-      <tr>
-        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
-        <td>Richard Marquand</td>
-        <td>May 25th, 1983</td>
-      </tr>
-    </tbody>
-  </table>
-</section> 
     </main>
   </body>
 </html>
-
