--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -58,21 +58,33 @@
 
 <!-- Works section -->
 <section id="works">
-  <div>
-    <header>
-      <h2>Works</h2>
-      <p>Take a look in our portfolio</p>
-    </header>
     <div>
-      <div><img src="images/pic-work-01.jpg" alt="" /></div>
-      <article><a href="#"><h3>Interior Design</h3></a></article>
-      <div><img src="images/pic-work-02.jpg" alt="" /></div>
-      <article><a href="#"><h3>Web Development</h3></a></article>
-      <div><img src="images/pic-work-03.jpg" alt="" /></div>
-      <article><a href="#"><h3>Personal Brand</h3></a></article>
+      <header>
+        <h2>Works</h2>
+        <p>Take a look in our portfolio</p>
+      </header>
+      <div>
+        <article>
+          <div>
+            <img src="images/pic-work-01.jpg" alt="" />
+          </div>
+          <a href="#"><h3>Interior Design</h3></a>
+        </article>
+        <article>
+          <div>
+            <img src="images/pic-work-02.jpg" alt="" />
+          </div>
+          <a href="#"><h3>Web Development</h3></a>
+        </article>
+        <article>
+          <div>
+            <img src="images/pic-work-03.jpg" alt="" />
+          </div>
+          <a href="#"><h3>Personal Brand</h3></a>
+        </article>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 <!-- About Us section -->
 <section id="about">
