--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -98,7 +98,7 @@
           <h3>Blockquote</h3>
           <blockquote>
             I will be the leader of a company that ends up being worth billions of dollars,
-            because I got the answers. I understand culture. I am the nucleus. I think that’s a
+            because I got the answers. I understand culture. I am the nucleus. I think that's a
             responsibility that I have, to push possibilities, to show people, this is the level
             that things could be at.
             <cite>Kanye West, Musician</cite>
@@ -188,16 +188,16 @@
         </div>
       </section>
 
-    <!-- Video -->
-    <section>
-    <header>
-        <h2>Video</h2>
-    </header>
+      <!-- Video -->
+      <section>
+        <header>
+          <h2>Video</h2>
+        </header>
         <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-        <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4" />
-    Sorry, your browser doesn't support HTML5 video
-    </video>
-    </section>
+          <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
+          Sorry, your browser doesn't support HTML5 video
+        </video>
+      </section>
 
     </main>
   </body>
